--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -10,3 +10,9 @@
 .my-details {
   background-color: rgba(255, 255, 255, 0.747);
 }
+
+@media screen and (max-width: 375px) {
+  img {
+    width: 350px;
+  }
+}
