--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -11,8 +11,9 @@
   background-color: rgba(255, 255, 255, 0.747);
 }
 
-@media screen and (max-width: 45rem) {
+@media screen and (min-width: 45rem) {
   img {
-    width: 45rem;
+    height: 30rem;
+    width: 20rem;
   }
 }
