--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -11,7 +11,7 @@
   background-color: rgba(255, 255, 255, 0.747);
 }
 
-@media screen and (min-width: 45rem) {
+@media screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
   img {
     height: 30rem;
     width: 20rem;
