--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -4,6 +4,7 @@
 }
 
 .profile {
+  height: 100%;
   max-width: 18em;
 }
 
@@ -13,7 +14,7 @@
 
 @media screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
   img {
-    height: 30rem;
+    height: 100%;
     width: 20rem;
   }
 }
