--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -13,7 +13,7 @@
 }
 
 @media screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
-  img {
+  Image {
     height: 100%;
     width: 20rem;
   }
