--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -4,17 +4,10 @@
 }
 
 .profile {
-  height: 100%;
-  max-width: 18em;
+  height: 80%;
+  width: 80%;
 }
 
 .my-details {
   background-color: rgba(255, 255, 255, 0.747);
 }
-
-/* @media screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
-  Image {
-    height: 100%;
-    width: 20rem;
-  }
-} */
