--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,14 @@ hr {
   z-index: 9;
 }
 
-.particles-box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+.parallax {
+  border-radius: 3px;
+  width: 77%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 450px) {
+  .parallax {
+    width: 100%;
+  }
 }
