--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -2,3 +2,14 @@
   height: 100vh;
   object-fit: cover;
 }
+
+.banner {
+  width: 77%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 450px) {
+  .banner {
+    width: 100%;
+  }
+}
