--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -11,3 +11,9 @@
 .my-details {
   background-color: rgba(255, 255, 255, 0.747);
 }
+
+@media screen and (max-width: 450px) {
+  .profile {
+    margin: 0 auto 13px auto;
+  }
+}
